--- a/Shop_01_multiProduct/Views/Shared/_partial/_MainHeader_1.cshtml
+++ b/Shop_01_multiProduct/Views/Shared/_partial/_MainHeader_1.cshtml
@@ -7,6 +7,19 @@
     }
 
 }
+<div class="top-header">
+    <div class="container">
+        <div class="currency"><a href="tel:@commonInfo.HotLine">Click để gọi: @commonInfo.HotLine</a></div>
+        <div class="top-bar-social">
+            <a href="skype:@commonInfo.Skype?call"><i class="fa fa-skype"></i></a>
+            <a href="@commonInfo.FaceBookLink" target="_blank"><i class="fa fa-facebook"></i></a>
+        </div>
+        <div class="support-link">
+            <a href="/about">Thông tin cửa hàng</a>
+            <a href="/home/contact">Hỗ trợ</a>
+        </div>
+    </div>
+</div>
 <div class="container main-header">
     <div class="row">
         <div class="col-xs-12 col-sm-12 col-md-3 logo">
