--- a/Shop_01_multiProduct/assets/css/style.css
+++ b/Shop_01_multiProduct/assets/css/style.css
@@ -1818,7 +1818,7 @@ span.notify-right{
 }
 
 .popular-tabs .product-list li .left-block{
-    min-height:285px;
+    min-height:193px;
     max-height:350px;
     overflow:hidden;
 }
@@ -2808,16 +2808,18 @@ span.notify-right{
   margin: 0 auto;
 }
 #left_column .block{
-  border: 1px solid #eaeaea;
+  border: 1px solid #ececd5;
 }
 #left_column .block .title_block{
-  font-size: 16px;
+  font-size: 12px;
   font-weight: bold;
   border-bottom: 1px solid #eaeaea;
   padding-left: 28px;
   text-transform: uppercase;
   padding-top: 11px;
   padding-bottom: 12px;
+  background-color: rgba(43, 23, 13, 0.8);
+  color: white;
 }
 #left_column .block .block_content{
   padding:  15px 20px;
@@ -3333,7 +3335,7 @@ span.notify-right{
   border: 1px solid #eaeaea;
   overflow: hidden;
   padding-bottom: 10px;
-  min-height:400px;
+  min-height:315px;
 }
 .product-list .info-orther{
   display: none;
