--- a/Shop_01_multiProduct/assets/css/option6.css
+++ b/Shop_01_multiProduct/assets/css/option6.css
@@ -111,7 +111,7 @@
 */
 .option6 .header{
 	background:rgba(43, 23, 13, 0.8);
-    background-image: url(http://media.anpero.com/images/36/82017/22017080217473069.jpg);
+    background-image: url(/assets/images/headerBg.jpg);
     background-size: cover;
     background-position: left top;
 }
