--- a/Shop_01_multiProduct/Views/Shared/_partial/_HomeSlide_1.cshtml
+++ b/Shop_01_multiProduct/Views/Shared/_partial/_HomeSlide_1.cshtml
@@ -1,5 +1,5 @@
 ﻿@using AnperoFrontend.WebService;
-<div class="container">
+
     <div class="row">
         <div class="col-sm-12" style="padding-right: 0px;">
             <div class="homeslider">
@@ -19,7 +19,7 @@
                                 <span id="bx-prev"></span>
                             </div>
                             <div id="bx-pager" class="slide-pager">
-                                @for (int i = 0; i < slide.Length; i++)
+                                http://localhost:5677/#                                @for (int i = 0; i < slide.Length; i++)
                                 {
                                     <a data-slide-index="@i" href="">@i</a>
                                 }
@@ -32,9 +32,10 @@
                     else
                     {
                         <ul id="contenhomeslider-customPage">
-                            <li><a href="#"><img alt="Funky roots" src="assets/data/option6/slide1.jpg" title="Funky roots" /></a></li>
-                            <li><img src="assets/data/option6/slide1.jpg" title="Funky roots" /></li>
-                            <li><img src="assets/data/option6/slide1.jpg" title="Funky roots" /></li>
+                            <li><a href="#"><img alt="Funky roots" src="/assets/images/862.jpg" title="Funky roots" /></a></li>
+                            <li><a href="#"><img alt="Funky roots" src="/assets/images/862.jpg" title="Funky roots" /></a></li>
+                            <li><a href="#"><img alt="Funky roots" src="/assets/images/862.jpg" title="Funky roots" /></a></li>
+                            
                         </ul>
                         <div class="bx-control">
                             <div class="slide-prev">
@@ -54,9 +55,9 @@
                 else
                 {
                     <ul id="contenhomeslider-customPage">
-                        <li><a href="#"><img alt="Funky roots" src="assets/data/option6/slide1.jpg" title="Funky roots" /></a></li>
-                        <li><img  src="assets/data/option6/slide1.jpg" title="Funky roots" /></li>
-                        <li><img   src="assets/data/option6/slide1.jpg" title="Funky roots" /></li>
+                        <li><a href="#"><img alt="Funky roots" src="/assets/images/862.jpg" title="Funky roots" /></a></li>
+                        <li><a href="#"><img alt="Funky roots" src="/assets/images/862.jpg" title="Funky roots" /></a></li>
+                        <li><a href="#"><img alt="Funky roots" src="/assets/images/862.jpg" title="Funky roots" /></a></li>
                     </ul>
                     <div class="bx-control">
                         <div class="slide-prev">
@@ -79,4 +80,4 @@
         </div>
       
     </div>
-</div>
+
