--- a/Shop_03_MultiProduct/Views/Product/List.cshtml
+++ b/Shop_03_MultiProduct/Views/Product/List.cshtml
@@ -46,7 +46,7 @@
                                     else
                                     {
                                     <li class="category1599">
-                                        <a href="@Anpero.StringHelpper.GetParentCategoryLink(productList.Item[0].ParentCatName, productList.Item[0].ParentId)" title="@productList.Item[0].ParentCatName">
+                                        <a href="@Anpero.StringHelpper.GetCategoryLink(productList.Item[0].ParentCatName, productList.Item[0].ParentId)" title="@productList.Item[0].ParentCatName">
                                             @productList.Item[0].ParentCatName
                                         </a>
                                         <span>—› </span>
