--- a/Shop_03_multiProduct/Views/Shared/_partial/_MainHeader_1.cshtml
+++ b/Shop_03_multiProduct/Views/Shared/_partial/_MainHeader_1.cshtml
@@ -10,7 +10,7 @@
     <div class="header-banner">
         <div class="assetBlock">
             <div style="height: 20px; overflow: hidden;" id="slideshow">
-                <p style="display: block;">HOT DAYS! - <span>10%</span> KHÁCH ĐẶT HÀNG ONLINE! &gt;</p><p style="display: none;">GIẢM GIÁ LÊN ĐẾN <span>20%</span> CHO ĐƠN ĐẶT HÀNG LỚN! &gt;</p>
+                <p style="display: block;">HOT DAYS! - <span>10%</span> KHÁCH ĐẶT HÀNG ONLINE! &gt;</p><p style="display: none;">HOTLINE: <span>0983.315.130</span> ĐẶT HÀNG NGAY! &gt;</p>
             </div>
         </div>
     </div>
